[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MY_PACKAGE"
version = "0.1.0"
authors = [{name = "Your Name"}]
description = "A package with DDD architecture"
readme = "README.md"
requires-python = ">=3.8"

dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "black>=23.0", "flake8>=6.0"]

[project.scripts]
my-package = "MY_PACKAGE.interfaces.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["MY_PACKAGE*"]
exclude = ["tests*", "examples*"]

[tool.black]
line-length = 88
target-version = ["py38"]
